--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tradeteens",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shubmohan11.github.io/Tradeteens",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
@@ -17,6 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,4 +41,10 @@
       "last 1 safari version"
     ]
   }
+, "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12"
+  }
 }
+ 
